experiencing nice page

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,13 @@
-title: Simply McLovin
-description: Technically I don't have a first name
-remote_theme: pages-themes/hacker@v0.2.0
+#google_analytics: UA-NNNNNNNN-N
+
+#header_pages:
+#  - index.md
+#  - about.md
+
+#footer: 'follow us on <a href="https://twitter.com/">twitter</a>'
+
+#style: light # dark (default) or light
+#listen_for_clients_preferred_style: true # true or false (default)
+
 plugins:
-- jekyll-remote-theme
+  - jekyll-seo-tag
