changed a few things

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,8 @@
-#google_analytics: UA-NNNNNNNN-N
+header_pages:
+  - index.md
+  - about.md
 
-#header_pages:
-#  - index.md
-#  - about.md
-
-#footer: 'follow us on <a href="https://twitter.com/">twitter</a>'
-
-#style: light # dark (default) or light
-#listen_for_clients_preferred_style: true # true or false (default)
+footer: 'took 10 minutes to think about this footer.'
 
 plugins:
   - jekyll-seo-tag
